fixed overflow on carx

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,11 +31,12 @@ body, html {
   font-family: "Lato", sans-serif;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 50%;
-  height: 50%;
+  height: fit-content;
   padding: 16px;
   margin: 10px auto;
   color: black;
   border-radius: 20px;
+  overflow: hidden;
 }
 
 .card-link {
@@ -60,8 +61,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
-  padding: 2em;
+  padding: 5em;
 }
 
 h2 {
