--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -8,11 +8,12 @@
     font-family: 'Lato', sans-serif;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     width: 50%;
-    height: 50%;
+    height: fit-content;
     padding: 16px;
     margin: 10px auto;
     color: black;
     border-radius: 20px;
+    overflow: hidden;
 }
 
 .card-link{
@@ -35,8 +36,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
-    padding: 2em;
+    padding: 5em;
 }
 
 h2 {
@@ -48,3 +48,4 @@ h2 {
     margin-right: auto;
     width: 50%;  
 }
+
